// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cartListReducer Reducer --> DEFAULT 1`] = `
Object {
  "list": Array [],
  "loading": false,
  "page": 0,
  "query": "",
}
`;

exports[`cartListReducer Reducer --> LOADING_INDICATOR_SUCCESS 1`] = `
Object {
  "list": Array [],
  "loading": true,
  "page": 0,
  "query": "",
}
`;

exports[`cartListReducer Reducer --> SEARCH_SUBMIT_SUCCESS 1`] = `
Object {
  "list": Array [
    Object {
      "article": "a",
      "id": 1,
      "snippet": "a",
    },
    Object {
      "article": "b",
      "id": 2,
      "snippet": "b",
    },
    Object {
      "article": "c",
      "id": 3,
      "snippet": "c",
    },
  ],
  "loading": false,
  "page": 3,
  "query": "test",
}
`;

exports[`cartListReducer Reducer --> return initial state 1`] = `
Object {
  "list": Array [],
  "loading": false,
  "page": 0,
  "query": "",
}
`;
